added Auth button to Swagger
